# botMaker

./: .gitignore  Dockerfile  MlLib Model Training Library.docx  Program.cs  README.md  botMaker.csproj  botMaker.http  buildspec.yaml  hello  initDummyDataForStrategy.json
Controllers/: AlertsController.cs  StrategyBacktesterController.cs
MlLib/: MLFall25HW1.ipynb  PurchasePredictionModelProjectBuildScript.py  pyproject.toml  run_all_tests.py  testScript.py
MlLib/dataDomain/: DataOrchestrator.py
MlLib/dataDomain/ProjectSpecificDataClasses/: 1stExampleTransformerConfig.json  PurchasePredictionDataTransformations.json
MlLib/dataDomain/dataTransformers/: abstractTransformer.py
MlLib/mathDomain/: costFunction.py  hypothesis.py  hypothesisExpander.py  linearAlgebraHelpers.py  lossFunction.py  regularizationFunction.py
MlLib/mathDomain/algorithmImplementations/: abstractGraphAlgorithm.py  breadthFirstSearch.py  depthFirstSearch.py
MlLib/mathDomain/algorithmImplementations/tests/: test_breadthFirstSearch.py
MlLib/mathDomain/graphBased/: graphStructures.py  splitFunction.py  treeNode.py  treeStructures.py  visualizer.py
MlLib/mathDomain/graphBased/searchAlgorithms/: DFS.py
MlLib/mathDomain/graphBased/tests/: nxGraphExample.py  test_graphStructures.py  test_treeStructures.py
MlLib/mathDomain/probabilityBased/: bayesRule.py  gaussianPrior.py  prior.py  productRule.py  sumRule.py
MlLib/mathDomain/tests/: test_hypothesis.py  test_lossFunction.py  test_probabilityBased.py
MlLib/mlDomain/: SVM.py  decisionTree.py  linearRegression.py  logisticRegression.py  perceptron.py  probabilisticKNN.py
MlLib/mlDomain/modelEvaluators/: genericEvaluator.py
MlLib/mlDomain/projectSpecificFiles/: adClickPredictionLogReg.py
MlLib/mlDomain/tests/: test_decisionTree.py  test_linearRegression.py  test_logisticRegression.py  test_perceptron_svm.py
MlLib/projectScripts/: AdClickModelProjectBuildScript.py  AdClickModelProjectExampleOutput  KNNClassifierTestScript.py  sandbox.py  testScript.py
Models/: Condition.cs  (+3 more)
(+18 files in other folders)
